--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -33,7 +33,7 @@
   <% end %>
 
     <div class="item-explain-box">
-      <span><%= @item.name %></span>
+      <span><%= @item.info %></span>
     </div>
     <table class="detail-table">
       <tbody>
