--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,12 +2,14 @@
 <header class='top-page-header'>
   <div class='search-bar-contents'>
     <%= link_to image_tag("furima-logo-color.png", class:"furima-icon"), "/" %>
-    <form class="search-form" action="#">
-      <input class='input-box' placeholder='キーワードから探す'>
-      <button class="search-button">
+    <%= search_form_for @p, url: items_search_path, class:"search-form" do |f| %>
+      <% f.label :name_eq, '商品名' %>
+      <%= f.text_field :name_eq, class:'input-box', placeholder:'キーワードから探す' %>
+      <%= f.label :aaa, class:"search-button" do %>
         <%= image_tag "search.png", class:"search-icon" %>
-      </button>
-    </form>
+        <%= f.submit class:"search", id: "q_aaa"%>
+      <% end %>
+    <% end %>
   </div>
   <div class='nav'>
     <ul class='lists-left'>
